--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martin portfolio</Martin></title>
+    <title>Martin portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header id="header">
+        <div class="container">
+            <div class="row">
+                <div class="logo">
+                    <a href="#">MARTIN</a>
+                </div>
+                <nav class="main_menu">
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">services</a></li>
+                        <li><a href="#">portfolio</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <!--banner start-->
+    <section id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="banner_content">
+                    <h2>Hello! i'm</h2>
+                    <h1>Martin Luther</h1>
+                    <p>WEB DESIGN | DIGITAL MARKETING | UX DESIGN | WEB DEVELOPMENT | MOBILE APPS</p>
+                    <a href="#">LET'S TALK NEW</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--banner end-->
 </body>
 </html>
